--- a/index.html
+++ b/index.html
@@ -2,16 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Udacity Retain</title>
+    <title>Cat Clicker</title>
     <link rel="stylesheet" href="css/retain.css">
+    
 </head>
 <body>
-    <form id="new-note-form" class="new-note-form">
-        <input id="new-note-content" class="new-note-content">
+    <ul id="cat-list"></ul>
+    <div id="cat">
+        <h2 id="cat-name"></h2>
+        <div id="cat-count"></div>
+        <img id="cat-img" src="" alt="cute cat">
+    </div>
+    <input id="admin-button" type="submit" value="admin"/>
+    <form id="admin-area">
+        <div class="form">
+        <label for="name">Enter your name: </label>
+        <input type="text" name="name" id="name" />
+    </div>
+    <div class="form">
+        <label for="url">Image URL: </label>
+        <input type="text" name="url" id="url" />
+    </div>
+        <div class="form">
+        <label for="clicks">Click count: </label>
+        <input type="text" name="clicks" id="clicks" />
+    </div>
+        <input type="submit" value="submit">
+        <input type="submit" value="cancel">
     </form>
-    <ul id="notes" class="notes"></ul>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/retain.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
