--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <input id="admin-button" type="submit" value="admin"/>
     <form id="admin-area">
         <div class="form">
-        <label for="name">Enter your name: </label>
-        <input type="text" name="name" id="name" />
-    </div>
-    <div class="form">
-        <label for="url">Image URL: </label>
-        <input type="text" name="url" id="url" />
-    </div>
+            <label for="name">Enter your name: </label>
+            <input type="text" name="name" id="name" />
+        </div>
         <div class="form">
-        <label for="clicks">Click count: </label>
-        <input type="text" name="clicks" id="clicks" />
-    </div>
-        <input type="submit" value="submit">
-        <input type="submit" value="cancel">
+            <label for="url">Image URL: </label>
+            <input type="text" name="url" id="url" />
+        </div>
+        <div class="form">
+            <label for="clicks">Click count: </label>
+            <input type="text" name="clicks" id="clicks" />
+        </div>
+        <input type="button" id="submit" value="submit">
+        <input type="button" id="cancel" value="cancel">
     </form>
     <script src="js/app.js"></script>
 </body>
