--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <title>Cat Clicker</title>
 </head>
-<body>
-    <ul id="cat-list"></ul>
-    <div id="cat">
+<body >
+    <ul data-bind="foreach:catList">
+        <li data-bind="text:name,click:$parent.setCurrectCat"></li>
+    </ul>
+    <div data-bind="with:currentCat">
 
-        <h2 id="cat-name"></h2>
-        <div id="cat-count"></div>
-        <img id="cat-img" src="" alt="cute cat">
+        <h2 data-bind="text:name"></h2>
+        <h4 data-bind="text:level"></h4>
+        <div data-bind="text:clickCount"></div>
+        <img data-bind="click:$root.incCounter, attr:{src:imgSrc}" src="" alt="cute cat">
+        <ul data-bind="foreach:nickName">
+            <li data-bind="text:$data"></li>
+        </ul>
 
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
